--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .btn-primary {
-  @apply bg-primary-500 hover:bg-primary-600 text-white font-medium py-2 px-4 rounded-lg transition-all duration-300 transform hover:scale-[1.02] active:scale-[0.98] focus:outline-none focus:ring-2 focus:ring-primary-300 focus:ring-opacity-50 disabled:opacity-50 disabled:cursor-not-allowed;
+  @apply bg-primary-600 hover:bg-primary-600 text-white font-medium py-2 px-4 rounded-lg transition-all duration-300 transform hover:scale-[1.02] active:scale-[0.98] focus:outline-none focus:ring-2 focus:ring-primary-300 focus:ring-opacity-50 disabled:opacity-50 disabled:cursor-not-allowed;
 }
 
 .form-label {
@@ -46,11 +46,11 @@ body {
 }
 
 .form-input {
-  @apply block w-full px-4 py-2.5 text-gray-900 border border-gray-300 rounded-lg focus:outline-none transition-all duration-300 ease-in-out bg-white/50 backdrop-blur-sm hover:bg-white/80;
+  @apply block w-full px-4 py-2.5 text-gray-900 border border-gray-300 rounded-lg focus:outline-none transition-all duration-300 ease-in-out bg-gray-100 backdrop-blur-sm hover:bg-white/80;
 }
 
 .form-select {
-  @apply block w-full px-4 py-2.5 text-gray-900 bg-white/50 backdrop-blur-sm border border-gray-300 rounded-lg focus:outline-none appearance-none transition-all duration-300 ease-in-out hover:bg-white/80;
+  @apply block w-full px-4 py-2.5 text-gray-900 bg-gray-100  backdrop-blur-sm border border-gray-300 rounded-lg focus:outline-none appearance-none transition-all duration-300 ease-in-out hover:bg-white/80;
 }
 
 .form-radio {
